--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!--Заголовки и подзаголовки-->
 	<h1> Автомобили альянса </h1>
 	<!--Вставка изображения-->
-	<img src="images/RNM.jpg" alt="Логотип авто-альянса 'Renault-Nissan-Mitsubishi'">
+	<!--><img src="images/RNM.jpg" alt="Логотип авто-альянса 'Renault-Nissan-Mitsubishi'"></!-->
 	<h2> Автомобили "Renault" </h2>
 		<!--Ненумерованный список-->
 		<ul>
